--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -25,7 +25,7 @@
     <!--end of container-->
 </section>
 
-<section style="padding-top: 0">
+<section style="padding-top: 0" data-ng-controller="UpdateProfileController as vm">
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12 text-center">
@@ -57,7 +57,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row" ng-show="vm.profile.IsAccountHolder=='Yes'">
                                 <div class="col-sm-6 col-md-offset-3">
                                     <div class="form-group form-group-default input-group">
                                         <label for="AccountNumberBox" class="ng-binding">Please enter Account number</label>
@@ -68,7 +68,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row" ng-show="vm.profile.IsAccountHolder=='Yes'">
                                 <div class="col-sm-6 col-md-offset-3">
                                     <div class="form-group form-group-default input-group">
                                         <label for="tokenSMSBox" class="ng-binding">Confirm Token SMS</label>
@@ -80,9 +80,9 @@
                                 </div>
                             </div>
                         </div>
-                        <input type="button" name="next" class="next action-button" value="Continue" title="Select a loan type to continue." />
+                        <input type="button" name="next" data-ng-disabled="vm.isReadonly" class="next action-button" value="Continue" title="Select a loan type to continue." />
                     </fieldset>
-                    <fieldset>
+                    <fieldset data-ng-disabled="vm.isReadonly">
                         <h2 class="fs-title">Basic Information</h2>
                         <div class="form-group-attached m-b-10">
                             <div class="row">
@@ -219,7 +219,7 @@
 
                         <input type="button" name="next" class="next action-button" value="Save and Continue" title="Select a loan type to continue." />
                     </fieldset>
-                    <fieldset>
+                    <fieldset data-ng-disabled="vm.isReadonly">
                         <h2 class="fs-title">Residential Information</h2>
                         <div class="form-group-attached m-b-10">
                             <div class="row">
@@ -308,7 +308,7 @@
                         <input type="button" name="previous" class="previous action-button" value="Previous" />
                         <input type="button" name="next" class="next action-button" value="Save and Continue" title="Complete form to continue." />
                     </fieldset>
-                    <fieldset>
+                    <fieldset data-ng-disabled="vm.isReadonly">
                         <h2 class="fs-title">Identification</h2>
 
                         <div class="form-group-attached m-b-10">
@@ -357,7 +357,7 @@
                         <input type="button" name="previous" class="previous action-button" value="Previous" />
                         <input type="button" name="next" class="next action-button" value="Save and Continue" title="Please choose your currency to continue" />
                     </fieldset>
-                    <fieldset>
+                    <fieldset data-ng-disabled="vm.isReadonly">
                         <h2 class="fs-title">Employment</h2>
                         <div class="form-group-attached m-b-10">
                             <div class="row">
@@ -438,7 +438,7 @@
                         <input type="button" name="previous" class="previous action-button" value="Previous" />
                         <input type="button" name="next" class="next action-button" value="Save and Continue" title="Please choose your currency to continue" />
                     </fieldset>
-                    <fieldset>
+                    <fieldset data-ng-disabled="vm.isReadonly">
                         <h2 class="fs-title">Emergency Contact</h2>
                         <div class="form-group-attached m-b-10">
                             <div class="row">
