--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -122,51 +122,119 @@
                     <h3>= <span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.totalLoanAmt | currency :''"></span></h3>
                 </div>
                 <div class="panel-body">
-                    <form>
-                        <div class="label font-weight-bold text-white">Check eligibility for owning this house</div>
-                        <div class="form-group form-group-default input-group">
-                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
-                            <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                                <option value="">Select Loan Tenure</option>
-                                <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
-                            </select>
+                    
+                    <div class="card-group horizontal" id="accordion" role="tablist" aria-multiselectable="false">
+                        <div class="card card-default m-b-0">
+                            <div class="card-header " role="tab" id="headingThree">
+                                <h4 class="card-title">
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <h5>Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost.ToString("N2")</span></h5>
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapseThree" class="collapse" role="tabcard" aria-labelledby="headingThree">
+                                <div class="card-block">
+                                    <table class="table cart mb48">
+                                        <caption>BOQs</caption>
+                                        <thead>
+                                        <tr>
+
+                                            <th>Building Stage</th>
+                                            <th>Cost (GHS)</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Land Acquisition</td>
+                                            <td>2,000.00</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group form-group-default input-group">
-                            <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
-                            <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
-                                Submit
-                            </span>
+                        <div class="card card-default m-b-0">
+                            <div class="card-header " role="tab" id="headingOne">
+                                <h4 class="card-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                       Your Customizations
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapseOne" class="collapse show" role="tabcard" aria-labelledby="headingOne">
+                                <div class="card-block">
+                                    <table class="table cart mb48">
+                                        <thead>
+                                        <tr>
+
+                                            <th>Item</th>
+                                            <th>Quantity</th>
+                                            <th>Unit Cost ({{vm.model.houseCostCurrency}})</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+
+                                        <tr data-ng-repeat="(key, value) in vm.model.selectedFixtures">
+
+                                            <td>
+                                                <a href="#">
+                                                    <img alt="{{value.ItemDescription}}" class="product-thumb" src="/images/FixturesImages/{{value.ItemImage}}" style="width: 90%"/>
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <span data-ng-bind="value.ItemCount">1</span>
+                                            </td>
+                                            <td>
+                                                <span data-ng-bind="value.UnitCost | currency:''"></span>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
-                    </form>
-                    <h4>Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost.ToString("N2")</span></h4>
-                    <table class="table cart mb48">
-                        <thead>
-                        <tr>
+                        <div class="card card-default m-b-0">
+                            <div class="card-header " role="tab" id="headingTwo">
+                                <h4 class="card-title">
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        Check Eligibility
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapseTwo" class="collapse" role="tabcard" aria-labelledby="headingTwo">
+                                <div class="card-block">
+                                    <form>
+                                        <div class="label font-weight-bold text-white">Check eligibility for owning this house</div>
+                                        <div class="form-group form-group-default input-group">
+                                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
+                                            <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                                <option value="">Select Loan Tenure</option>
+                                                <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group form-group-default input-group">
+                                            <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
+                                            <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
+                                                Submit
+                                            </span>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    
+                    
+                    
+                    
+                    
+                    
 
-                            <th>Item</th>
-                            <th>Quantity</th>
-                            <th>Unit Cost ({{vm.model.houseCostCurrency}})</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-                        <tr data-ng-repeat="(key, value) in vm.model.selectedFixtures">
-
-                            <td>
-                                <a href="#">
-                                    <img alt="{{value.ItemDescription}}" class="product-thumb" src="/images/FixturesImages/{{value.ItemImage}}" style="width: 90%"/>
-                                </a>
-                            </td>
-                            <td>
-                                <span data-ng-bind="value.ItemCount">1</span>
-                            </td>
-                            <td>
-                                <span data-ng-bind="value.UnitCost | currency:''"></span>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    
+                   
+                   
 
                 </div>
             </div>
