--- a/ProjectUbuild/Views/Loan/LoanDocs.cshtml
+++ b/ProjectUbuild/Views/Loan/LoanDocs.cshtml
@@ -63,7 +63,7 @@
             </div>
 
             <!-- Modal -->
-            <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade stick-up" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document" style="margin-top: 100px">
                     <div class="modal-content">
                         <div class="modal-header" style="padding: 15px">
